--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-.exercicios {
-    text-align: center;
-}
-
 .navbar {
     padding: 0%;
     font-size: 15px;
@@ -10,7 +6,8 @@
 
 .nav {
     height: 100%;
-    align-items: center;   
+    align-items: center;
+    padding-left: 40%;
 }
 
 .nav-item:hover {
@@ -22,18 +19,19 @@
     color: #FFFFFF;
 }
 
-.nav-item:hover .nav-link{
+.nav-item:hover .nav-link {
     /* Efeito de baixar a letra quando mouse ta em cima do menu */
     height: 100%;
     line-height: 2.3;
 }
+
 .nav-item:hover .nav-sub {
     display: block;
 }
 
 
 .nav-link {
-    color:#FFFFFF;
+    color: #FFFFFF;
 }
 
 .nav-sub {
@@ -59,4 +57,11 @@
 
 .nav-sub-link:hover {
     text-decoration: none;
+}
+
+.exercicios {
+    text-align: center;
+    width: 1000px;
+    margin: auto;
+    padding-bottom: 2rem;
 }
